fix alto contraste boost

--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,6 @@ html {
   margin-left: 2px;
   font-weight: 300;
 }
+.high-contrast .boost-case-study {
+  background-color: #000 !important;
+}
